Update endorsers in index.html

--- a/index.html
+++ b/index.html
@@ -254,7 +254,8 @@
         <li><strong>Raquel Teran</strong>, Former Chair, Arizona Democratic Party; Past Senate Democratic Leader</li>
         <li><strong>Terry Goddard</strong>, Former Arizona Attorney General & Phoenix Mayor</li>
         <li><strong>Sen. Catherine Miranda</strong>, LD 11; Senate Democratic Assistant Leader</li>
-        <li><strong>Martín Quezada</strong>, SCM, LD22; former State Senator</li>
+        <li><strong>Sen. Lauren Kuby</strong>, LD 8</li>
+        <li><strong>Martín Quezada</strong>, SCM, LD 22; former State Senator</li>
         <li><strong>Markus Ceniceros</strong>, Vice President, Littleton Elementary School District</li>
         <li><strong>Missa Foy</strong>, Co-Chair, Progressive Council; Chair, Navajo County Democratic Party</li>
         <li><strong>Nick Collins</strong>, Secretary, Progressive Council</li>
@@ -295,10 +296,8 @@
         <li><strong>Bernard Buddy Fleitz</strong>, State Committee Member</li>
         <li><strong>Kathleen Fitzmaurice-Yontz</strong>, State Committee Member</li>
         <li><strong>Stephen Harshman</strong>, State Committee Member</li>
-        <li><strong>Travis Nass</strong>, State Committee Member</li>
         <li><strong>George McGaughey</strong>, State Committee Member</li>
         <li><strong>Susan Ordway</strong>, State Committee Member</li>
-        <li><strong>Sarah Stuart</strong>, State Committee Member</li>
         <li><strong>Sherri Johnson</strong>, State Committee Member</li>
         <li><strong>Shara Carrillo</strong>, State Committee Member</li>
         <li><strong>Mikah Dyer</strong>, State Committee Member</li>
@@ -316,13 +315,11 @@
         <li><strong>Rebecca Villalpando</strong>, State Committee Member</li>
         <li><strong>Stephen Magruder</strong>, State Committee Member</li>
         <li><strong>Craig Falasco</strong>, State Committee Member</li>
-        <li><strong>Celia Barotz</strong>, State Committee Member</li>
         <li><strong>Isabel ONeal</strong>, State Committee Member</li>
         <li><strong>Doug Arnold</strong>, State Committee Member</li>
         <li><strong>Natacha Chavez</strong>, State Committee Member</li>
         <li><strong>James Hannley</strong>, State Committee Member</li>
         <li><strong>Susan R Arnold</strong>, State Committee Member</li>
-        <li><strong>Peter Karp</strong>, State Committee Member</li>
         <li><strong>Patricia Pittman</strong>, State Committee Member</li>
         <li><strong>Salauddin Choudhury</strong>, State Committee Member</li>
         <li><strong>Shams Abdussamad</strong>, State Committee Member</li>
@@ -332,24 +329,27 @@
         <li><strong>Dana Garcia</strong>, State Committee Member</li>
         <li><strong>Yazdaan Taajwar</strong>, State Committee Member</li>
         <li><strong>James Kimes</strong>, State Committee Member</li>
-        <li><strong>Jacqueline deSa</strong>, State Committee Member</li>
         <li><strong>Amy Satre</strong>, State Committee Member</li>
         <li><strong>Aaron Essif</strong>, State Committee Member</li>
         <li><strong>Jessica Chalberg</strong>, State Committee Member</li>
         <li><strong>Aaron Ezekiel</strong>, State Committee Member</li>
         <li><strong>Joanne Markis</strong>, State Committee Member</li>
-        <li><strong>Tearanie Chinn</strong>, State Committee Member</li>
         <li><strong>Janet Kerby</strong>, State Committee Member</li>
         <li><strong>Kay Davis</strong>, State Committee Member</li>
         <li><strong>Chris Gehlker</strong>, State Committee Member</li>
         <li><strong>Geoffry Fitzwater-Castle</strong>, State Committee Member</li>
         <li><strong>Chris Fleischman</strong>, State Committee Member</li>
         <li><strong>Katherine Ginzel</strong>, State Committee Member</li>
-        <li><strong>Toby Friedman</strong>, State Committee Member</li>
         <li><strong>Charlie Silver</strong>, State Committee Member</li>
+        <li><strong>Margarita Silva</strong>, State Committee Member</li>
+        <li><strong>Manuel Hernandez</strong>, State Committee Member</li>
+        <li><strong>Nancy Meister</strong>, State Committee Member</li>
+        <li><strong>Janice Johnston</strong>, State Committee Member</li>
+        <li><strong>Ann Lutz</strong>, State Committee Member</li>
+        <li><strong>Zlatica Smekal</strong>, State Committee Member</li>
         <li><strong>Dianne Post</strong>, Attorney</li>
         <li><strong>Syed Mahmud Nasir Raza</strong>, Democratic Voter & Member, LD 4</li>
-        <li><strong>Nancy Meister</strong>, State Committee Member</li>
+        <li><strong>Jana Rose Ochs</strong>, PC, LD9</li>
     </ul>
     <!-- National Leaders -->
     <h3 class="text-2xl font-semibold text-gray-700 mt-10 mb-4">National Leaders</h3>
